fix: Join Beta button not visible at certain window sizes (#457)
* Fix position of beta button in mobile nav

* Fix MVP nav overflow

* Beta announcement card

--- a/src/components/MVP/AnnouncementCard/AnnouncementCard.module.scss
+++ b/src/components/MVP/AnnouncementCard/AnnouncementCard.module.scss
@@ -42,4 +42,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
